syntax = "proto3";
package kratos.api;

option go_package = "interface/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Trace trace = 3;
  Auth auth = 4;
  Casbin casbin = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    int32 db = 3;
    string password = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  message Kafka { repeated string addrs = 1; }
  message MongoDB {
    string uri = 1;
    string database = 2;
  }
  Database database = 1;
  Redis redis = 2;
  Kafka kafka = 3;
  MongoDB mongodb = 4;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message Trace { string endpoint = 1; }

message Auth {
  string service_key = 1;
  string api_key = 2;
}

message Casbin {
  bool enable = 1;
  bool debug = 2;
  string model_path = 3;
  bool auto_load = 4;
  int32 auto_load_internal = 5;
}
